styles.css
@import url(./styles/reset.css);
@import url(./styles/ui.css);

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

/* /////////////////////////////// */
/* /////////////////////////////// */

:root {
  --font-color: #0d0c22;
  --body-bg: #f3f3f6;
  --message-bg: white;

  --hero-font-size: clamp(2rem, 7vw + 1rem, 9rem);

  scroll-behavior: smooth;
}

body {
  background-color: var(--body-bg);
  color: var(--dark-color);
}

header {
  padding-top: 20vh;
  padding-bottom: calc(20vh / 1.618);
  min-height: 100dvh;
  font-family: Inter, var(--font-sans-serif);
  background: linear-gradient(to bottom, var(--white) 0%, var(--light-bg) 100%);

  display: flex;
  flex-direction: column;
  justify-content: center;
  place-items: center;
}
header .logo {
  text-align: center;
  font-size: 2rem;
  font-weight: 600;
  /* margin-top: auto; */
  padding-bottom: 1.5rem;
  margin-bottom: auto;
}
header h1 {
  font-weight: bold;
  text-align: center;
  max-width: 90vw;
  font-size: var(--hero-font-size);
  text-box-trim: trim-both;
  text-box-edge: cap text;
}
header p {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  margin-bottom: auto;
  text-align: center;
  font-size: calc(var(--hero-font-size) / 1.618 / 1.618);
  font-weight: 200;
  line-height: 1.35;
}

.nobreak {
  white-space: nowrap;
}

#app {
  min-height: 100dvh;
  padding: 1rem;

  display: grid;
  align-items: start;
  grid-template-columns: 1fr min(450px, 100%) 1fr;
}

/* only for index.html */
main#app {
  position: relative;
  align-items: center;
  padding-bottom: 10vh;
}

.login-card,
.edit-card {
  grid-column: 2 / -2;
  position: relative;
  padding: 3rem 2.5rem;
  background-color: var(--white);
  border-radius: 2rem;
  box-shadow: 0 0 0 1px var(--light-border-color);
  
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  gap: 1rem;
}

.tab-buttons {
  align-self: center;
  flex-shrink: 0;
  display: flex;
  justify-content: space-around;
  border-radius: 1rem;
  overflow: hidden;
  background-color: var(--light-bg);
}
.tab-buttons button {
  border-radius: 1rem;
  flex: 1;
  padding: 0.5rem 2rem;
  cursor: pointer;
  background: transparent;
  border: none;
  font-size: 1rem;
  color: var(--light-color);
}
.tab-buttons button.active {
  color: var(--white);
  font-weight: bold;
  background-color: var(--dark-bg);
}
.tab-content {
  display: none;
  position: relative;
}
.tab-content.active {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

/*//////////  Footer  //////////*/

footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;

  color: var(--light-color);

  min-height: 10dvh;
  display: grid;
  place-items: center;
}
footer span {
  text-align: center;
}

/*//////////  Messages  //////////*/

#loginContainer.incorrect input {
  border-color: #ff9eb1;
  background-color: hsl(348, 100%, 95%);
}
#loginContainer.incorrect label {
  color: crimson;
}
#registerContainer.incorrect #usernameInputReg {
  border-color: #ff9eb1;
  background-color: hsl(348, 100%, 95%);
}
#registerContainer.incorrect label:has(#usernameInputReg) {
  color: crimson;
}

#registerContainer input.valid {
 border-color: #6ec540;
 background-color: hsl(115, 100%, 95%);
}
#registerContainer input.invalid {
  position: relative;
  border-color: #ff9eb1;
  background-color: hsl(348, 100%, 95%);
}

#registerContainer label:has(input.invalid):after {
  content: 'already exist';
  color: var(--white);
  background-color: crimson;
  height: 1.5rem;
  padding: 0 0.85rem;
  position: absolute;
  right: 1rem;
  top: 0.6rem;
  border-radius: 0.5rem;
  font-size: 0.8rem;

  display: flex;
  justify-content: center;
  align-items: center;
}
#registerContainer label:has(#confirmPasswordInputReg.invalid):after {
  content: "doesn't match";
}

/*//////////  Commander Room  //////////*/

.commander-container {
  position: fixed;
  inset: 0;

  display: flex;
  justify-content: center;
  align-items: center;
}

.commander-container.scrollable {
  align-items: start;
  overflow-y: auto;
  padding-top: 5vmin;
  padding-bottom: 5vmin;
}

.commander-card {
  position: relative;

  display: flex;
  flex-direction: column;

  width: fit-content;
  max-width: 90vmin;
  padding: 5vmin;
  border-radius: 5vmin;

  color: var(--font-color);
  background-color: var(--message-bg);

  /* filter: drop-shadow(0 2px 0 hsla(45deg 50% 25% / 0.05)); */
}

.commander-card:before {
  content: "";
  position: absolute;
  z-index: 0;

  bottom: 1px;
  right: -2.5vmin;
  height: 5vmin;
  width: 5vmin;
  border-bottom-left-radius: 3vmin;

  background-color: var(--message-bg);
}
.commander-card:after {
  content: "";
  position: absolute;
  z-index: 1;

  bottom: 0;
  right: -2.5vmin;
  width: 2.5vmin;
  height: calc(5vmin + 1px);
  border-bottom-left-radius: 3vmin;

  background-color: var(--body-bg);
}

.commander-card img {
  border-radius: 2vmin;
  width: 100%;
}

.user-message {
  font-size: 5vmin;
  font-weight: 500;
}
.user-message.gap {
  margin-bottom: 1.25vmin;
}
.loading.user-message {
  opacity: 0.2;
  padding-left: 2vmin;
  padding-right: 2vmin;
}

.username {
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translate(-50%, calc(100% + 0.5rem));
  color: var(--light-color);
  font-size: 0.75rem;
  mix-blend-mode: difference;
}

/*//////////  Edit Menu  //////////*/

.edit-container {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  min-height: 100dvh;
  padding: 1rem;

  display: grid;
  align-items: center;
  grid-template-columns: 1fr min(450px, 100%) 1fr;

  z-index: 999;
}

.bg-fading {
  position: fixed;
  inset: 0;
  background-color: hsla(0deg 0 0 / 0.65);
}

/*//////////  Hidden Elements  //////////*/

.commander-card.hidden,
.edit-container.hidden,
#backBtn {
  display: none;
}

/*//////////  Color Themes Switcher  //////////*/

#themes-container {
  display: grid;
  gap: 0.5rem;
  grid-template-columns: repeat(auto-fill, minmax(4rem, 1fr));
}

.color-option {
  position: relative;
  cursor: pointer;
}
.color-option input[type="radio"] {
  display: none; /* скрываем стандартную радио кнопку */
}

.color-preview-bg {
  width: 100%;
  height: 4rem;
  position: relative;
  border-radius: 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
.color-preview {
  width: 2rem;
  height: 1.25rem;
  border-radius: 0.25rem;
}
.color-option input[type="radio"]:checked + .color-preview-bg {
  box-shadow: inset 0 0 0 3px #0d0c22, inset 0 0 0 5px #fff;
}

.color-preview-bg:has(img) {
  align-items: stretch;
}
.color-preview-bg img {
  width: 100%;
  padding: 1rem;
}

.color-preview-bg:hover {
  box-shadow: inset 0 0 0 2px hsla(243deg 48% 9% / 0.2);
}

/*//////////  Fullscreen  //////////*/

.commander-card img {
  cursor: pointer;
}

.commander-card img.fullscreen {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  border-radius: 0;
  z-index: 1000;
}
.commander-container:has(img.fullscreen):after {
  content: '';
  position: fixed;
  inset: 0;
  background-color: black;
}
#app:has(.fullscreen) #options {
  display: none;
}

/*//////////  Responsive  //////////*/

@media (max-width: 767px) {
  header .logo {
    font-size: 1.2rem;
  }
  header h1 {
    max-width: 85vw;
  }
  header p {
    max-width: 75vw;
    font-size: 1.4rem;
  }
}

@media (max-width: 414px) {
  header {
    background: linear-gradient(to bottom, var(--light-bg) 0%, var(--white) 100%);
  }

  header .logo {
    font-size: 0.9rem;
  }
  header p {
    font-size: 1rem;
    max-width: 85vw;
  }

  #app {
    padding: 0;
  }

  main#app {
    padding-bottom: 15vh;
  }

  .login-card {
    border-radius: 0;
    padding: 1.5rem;
    min-height: 85dvh;
    margin-top: 0;
    box-shadow: none;

    justify-content: center;
  }

  .edit-container {
    padding: 0;
  }
  .edit-card {
    border-radius: 0;
    padding: 1.5rem;
    padding-top: 5.5rem;
    min-height: 100dvh;
    margin-top: 0;
  }
  
  #backBtn {
    display: flex; /* make it visible on mobile screen */
    position: absolute;
    top: 0;
    right: 0;
    margin: 1.5rem;
  }

  footer {
    background-color: var(--white);
    min-height: 15dvh;
  }
  footer span {
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
  }
}

